# ARTO-Project

./: .gitignore  Makefile  README.md  build_llvm.sh  build_svf.sh  toolchain.mk
WCET/: .gitignore  README.md  wcet_eva.py
WPP/: .gitignore  QUICKSTART.md  README.md  analyze.py  demo.py  main.py  parseData.py  rules_packing.py
ardupilot/: binary_rewrite.txt  branch_trace.txt  compile_0_step.txt  compile_1_step.txt  compile_2_step.txt  compile_3_step.txt  compile_4_step.txt  compile_4_step_for_collect.txt  compile_5_step.txt  compile_6_step.txt  compile_7_step.txt  compile_8_step.txt  hash_value.txt  main_loop_time.txt  remote_verify.sh  svf_analysis.txt  wscript
ardurover/: .gitignore  branch_trace.txt  compile_0_step_rover.txt  compile_1_step_rover.txt  compile_2_step_rover.txt  compile_3_step_rover.txt  compile_4_step_for_collect.txt  compile_4_step_rover.txt  compile_5_step_rover.txt  compile_6_step_rover.txt  compile_7_step_rover.txt  compile_8_step_rover.txt  hash_value.txt  link-command.txt  llvm-link16.0.txt  mainjob.txt  path_start.txt  remote_verify.sh  source_filename.txt  svf_analysis.txt  wscript-3.6
build_PX4/: build_px4_step_0.sh  (+9 more)
pre-analysis16.0/virtualcall/: .gitignore  CMakeLists.txt  CMakeListsdisable.txt  boost.cmake  compile_command.txt  env.sh  llvm.cmake  svf.cmake
pre-analysis16.0/virtualcall/include/: Analyzer.h  CallGraph.h  WholeProgramDevirt.h_disable  addMetadata.h  inCallUtil.h  macro.h  vCallAnalysis.h
pre-analysis16.0/virtualcall/src/:  addMetadata.cpp  Analyzer.cc  CallGraph.cc  findVirtualtargets.cpp  main.cpp
(+253 files in other folders)
